<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.appointments.AppointmentsFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding"
        android:paddingEnd="@dimen/padding">
        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:layout_marginTop="@dimen/layout_margin"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/appointments_paw"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginHorizontal="@dimen/layout_margin"
                android:gravity="center"
                android:src="@drawable/paw" />

            <TextView
                android:id="@+id/next_appointments"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_appointments"
                android:textColor="@color/gray_700"
                android:textFontWeight="700"
                android:textSize="20dp"
                android:textStyle="bold" />
        </LinearLayout>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:clickable="true"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="@dimen/layout_margin"
            android:focusable="true"
            android:checkable="true">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="horizontal" >
                <ImageView
                    android:id="@+id/appointment_image1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="@dimen/layout_margin"
                    android:gravity="center"
                    android:src="@drawable/schedule"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    tools:layout_editor_absoluteX="186dp"
                    tools:layout_editor_absoluteY="281dp">

                    <TextView
                        android:id="@+id/card_title1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/appointment"
                        android:textColor="@color/gray_700"
                        android:textFontWeight="700"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/card_subtitle1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_margin"
                        android:gravity="center"
                        android:text="@string/appointment_place"
                        android:textColor="@color/gray_400"
                        android:textFontWeight="700"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/card_date1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/appointment_date"
                        android:textColor="@color/gray_400"
                        android:textFontWeight="700"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
            android:layout_height="100dp"
            android:layout_width="match_parent"
            android:clickable="true"
            android:padding="@dimen/small_padding"
            android:layout_marginTop="@dimen/layout_margin"
            android:focusable="true"
            android:checkable="true">
            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="16dp"
                android:paddingRight="16dp"
                android:orientation="horizontal" >
                <ImageView
                    android:id="@+id/appointment_image2"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginHorizontal="@dimen/layout_margin"
                    android:gravity="center"
                    android:src="@drawable/schedule"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="88dp"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/padding"
                    android:paddingEnd="@dimen/padding"
                    tools:layout_editor_absoluteX="186dp"
                    tools:layout_editor_absoluteY="281dp">

                    <TextView
                        android:id="@+id/card_title2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/appointment"
                        android:textColor="@color/gray_700"
                        android:textFontWeight="700"
                        android:textSize="20dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/card_subtitle2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="@dimen/layout_margin"
                        android:gravity="center"
                        android:text="@string/appointment_place"
                        android:textColor="@color/gray_400"
                        android:textFontWeight="700"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/card_date2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/appointment_date"
                        android:textColor="@color/gray_400"
                        android:textFontWeight="700"
                        android:textSize="15dp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>